fix: resolve logo image display problems
- Specify rectangle for shape of images in jolla template so that images are not cropped
- Amend layout of sponsor logos to correct proportions of and centre images

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,2 @@
 /* css styles */
+.spacer { padding: 15px; }
